Sat Feb 06 11:20:27 GMT 2010  Richard Boulton <richard@tartarus.org>

	* utils/make_xappy_tarballs: Update branchpoints.

Sat Feb 06 11:19:18 GMT 2010  Richard Boulton <richard@tartarus.org>

	* xappy/query.py: Basic fixes to the Query.get_facet{,s} code.  No
	  tests for this yet, since it's not actually hooked in to running
	  tests.

Fri Feb 05 09:34:08 GMT 2010  Richard Boulton <richard@tartarus.org>

	* xappy/doctests/searchconnection_doctest2.txt,
	  xappy/mset_search_results.py: Remove use of score_evenness(): use
	  a much simpler algorithm instead.  Testing with real-world data
	  shows that score_evenness() doesn't return a particularly useful
	  value anyway, so it'll be being removed from Xapian soon.  We're
	  likely to remove get_suggested_facets() at some point soonish,
	  too.

Thu Feb 04 15:24:01 GMT 2010  Richard Boulton <richard@tartarus.org>

	* research/expand_prefixes.py: Add a little research script.

Tue Feb 02 16:48:19 GMT 2010  Richard Boulton <richard@tartarus.org>

	* utils/make_xappy_tarballs: Update branchpoint.
	* xappy/mset_search_results.py: Use UnbiasedNumericRanges instead
	  of NumericRanges if it's available.

Mon Feb 01 11:19:12 GMT 2010  Richard Boulton <richard@tartarus.org>

	* xappy/searchconnection.py: Check for the correct metadata key.

Wed Jan 27 15:20:15 GMT 2010  Richard Boulton <richard@tartarus.org>

	* xappy/indexerconnection.py,xappy/searchconnection.py,
	  xappy/unittests/cached_searches.py: Add ability to copy a cache
	  into the main xapian index.  When this has been done, open the
	  cache automatically, both in future IndexerConnections and in
	  SearchConnections.  Also, complain if an IndexerConnection which
	  has had a cache applied doesn't have a cache connected when a
	  deletion is performed.

Tue Jan 26 14:12:56 GMT 2010  Richard Boulton <richard@tartarus.org>

	* xappy/unittests/cached_searches.py: Test asking for facets with a
	  cached query id, when none are cached.
