@@ -45,21 +45,21 @@ except ImportError:
 #  - SHA1 sum of package
 archives = [
     ('Xapian core',
-     'http://xappy.googlecode.com/files/xapian-core-13833.tgz',
+     'http://xappy.googlecode.com/files/xapian-core-14062.tgz',
      'xapian-core.tgz',
-     '339b486c20b29e17443ed75f2d867ad2cac12130',
+     '3ebfa9d9761dfc86a98df8ff5257da07b7c22d75',
      '',
     ),
     ('Xapian bindings',
-     'http://xappy.googlecode.com/files/xapian-bindings-13833.tgz',
+     'http://xappy.googlecode.com/files/xapian-bindings-14062.tgz',
      'xapian-bindings.tgz',
-     'dc8f7f7a6d922495bfc8b35027ee1c25073d6cb2',
+     '916375b81d08f3126f1752333232fbdf69341faa',
      '',
     ),
     ('Xapian win32 build system',
-     'http://xappy.googlecode.com/files/win32msvc-13833.tgz',
+     'http://xappy.googlecode.com/files/win32msvc-14062.tgz',
      'win32msvc.tgz',
-     '125ffcec8a47918461ed8d249e1e01d1d5206d91',
+     'cbbed91f282a8517e70cfdbfa16ebe06b722a8e3',
      'xapian-core/win32',
     ),
     ('Xapian extras',
